@@ -1,11 +1,11 @@
 
 all:
-	cc  -I. -Ilib/SPVM/Build/include -fno-strict-aliasing -pipe -fstack-protector -I/usr/local/include -D_LARGEFILE_SOURCE -D_FILE_OFFSET_BITS=64 -std=c99 -Wall -Wextra -Wno-unused-label -Wno-unused-function -Wno-unused-label -Wno-unused-parameter -Wno-unused-variable -lm  -O3 -o solo/spvm_main solo/spvm_main.c lib/SPVM/Build/src/spvm_array_field_access.o lib/SPVM/Build/src/spvm_basic_type.o lib/SPVM/Build/src/spvm_block.o lib/SPVM/Build/src/spvm_call_sub.o lib/SPVM/Build/src/spvm_case_info.o lib/SPVM/Build/src/spvm_compiler.o lib/SPVM/Build/src/spvm_compiler_allocator.o lib/SPVM/Build/src/spvm_constant.o lib/SPVM/Build/src/spvm_csource_builder.o lib/SPVM/Build/src/spvm_descriptor.o lib/SPVM/Build/src/spvm_dumper.o lib/SPVM/Build/src/spvm_enumeration.o lib/SPVM/Build/src/spvm_enumeration_value.o lib/SPVM/Build/src/spvm_field.o lib/SPVM/Build/src/spvm_field_access.o lib/SPVM/Build/src/spvm_hash.o lib/SPVM/Build/src/spvm_hash_func.o lib/SPVM/Build/src/spvm_list.o lib/SPVM/Build/src/spvm_my.o lib/SPVM/Build/src/spvm_op.o lib/SPVM/Build/src/spvm_op_checker.o lib/SPVM/Build/src/spvm_opcode.o lib/SPVM/Build/src/spvm_opcode_array.o lib/SPVM/Build/src/spvm_opcode_builder.o lib/SPVM/Build/src/spvm_package.o lib/SPVM/Build/src/spvm_package_var.o lib/SPVM/Build/src/spvm_package_var_access.o lib/SPVM/Build/src/spvm_runtime.o lib/SPVM/Build/src/spvm_runtime_allocator.o lib/SPVM/Build/src/spvm_runtime_api.o lib/SPVM/Build/src/spvm_string_buffer.o lib/SPVM/Build/src/spvm_sub.o lib/SPVM/Build/src/spvm_switch_info.o lib/SPVM/Build/src/spvm_toke.o lib/SPVM/Build/src/spvm_type.o lib/SPVM/Build/src/spvm_use.o lib/SPVM/Build/src/spvm_util_allocator.o lib/SPVM/Build/src/spvm_var.o lib/SPVM/Build/src/spvm_yacc.o lib/SPVM/Build/src/spvm_yacc_util.o
+	cc -DSPVM_DEBUG_DUMP -DSPVM_DEBUG_OBJECT_COUNT -I. -Ilib/SPVM/Build/include -fno-strict-aliasing -pipe -fstack-protector -I/usr/local/include -D_LARGEFILE_SOURCE -D_FILE_OFFSET_BITS=64 -std=c99 -Wall -Wextra -Wno-unused-label -Wno-unused-function -Wno-unused-label -Wno-unused-parameter -Wno-unused-variable -lm  -O0 -g -o solo/spvm_main solo/spvm_main.c lib/SPVM/Build/src/spvm_array_field_access.o lib/SPVM/Build/src/spvm_basic_type.o lib/SPVM/Build/src/spvm_block.o lib/SPVM/Build/src/spvm_call_sub.o lib/SPVM/Build/src/spvm_case_info.o lib/SPVM/Build/src/spvm_compiler.o lib/SPVM/Build/src/spvm_compiler_allocator.o lib/SPVM/Build/src/spvm_constant.o lib/SPVM/Build/src/spvm_csource_builder.o lib/SPVM/Build/src/spvm_descriptor.o lib/SPVM/Build/src/spvm_dumper.o lib/SPVM/Build/src/spvm_enumeration.o lib/SPVM/Build/src/spvm_enumeration_value.o lib/SPVM/Build/src/spvm_field.o lib/SPVM/Build/src/spvm_field_access.o lib/SPVM/Build/src/spvm_hash.o lib/SPVM/Build/src/spvm_hash_func.o lib/SPVM/Build/src/spvm_list.o lib/SPVM/Build/src/spvm_my.o lib/SPVM/Build/src/spvm_op.o lib/SPVM/Build/src/spvm_op_checker.o lib/SPVM/Build/src/spvm_opcode.o lib/SPVM/Build/src/spvm_opcode_array.o lib/SPVM/Build/src/spvm_opcode_builder.o lib/SPVM/Build/src/spvm_package.o lib/SPVM/Build/src/spvm_package_var.o lib/SPVM/Build/src/spvm_package_var_access.o lib/SPVM/Build/src/spvm_runtime.o lib/SPVM/Build/src/spvm_runtime_allocator.o lib/SPVM/Build/src/spvm_runtime_api.o lib/SPVM/Build/src/spvm_string_buffer.o lib/SPVM/Build/src/spvm_sub.o lib/SPVM/Build/src/spvm_switch_info.o lib/SPVM/Build/src/spvm_toke.o lib/SPVM/Build/src/spvm_type.o lib/SPVM/Build/src/spvm_use.o lib/SPVM/Build/src/spvm_util_allocator.o lib/SPVM/Build/src/spvm_var.o lib/SPVM/Build/src/spvm_yacc.o lib/SPVM/Build/src/spvm_yacc_util.o
 
 test:
-	cc  -I. -Ilib/SPVM/Build/include -fno-strict-aliasing -pipe -fstack-protector -I/usr/local/include -D_LARGEFILE_SOURCE -D_FILE_OFFSET_BITS=64 -std=c99 -Wall -Wextra -Wno-unused-label -Wno-unused-function -Wno-unused-label -Wno-unused-parameter -Wno-unused-variable -lm  -O3 -o solo/t/spvm_t_list solo/t/spvm_t_list.c spvm_list.o spvm_util_allocator.o
+	cc -DSPVM_DEBUG_DUMP -DSPVM_DEBUG_OBJECT_COUNT -I. -Ilib/SPVM/Build/include -fno-strict-aliasing -pipe -fstack-protector -I/usr/local/include -D_LARGEFILE_SOURCE -D_FILE_OFFSET_BITS=64 -std=c99 -Wall -Wextra -Wno-unused-label -Wno-unused-function -Wno-unused-label -Wno-unused-parameter -Wno-unused-variable -lm  -O0 -g -o solo/t/spvm_t_list solo/t/spvm_t_list.c spvm_list.o spvm_util_allocator.o
 	solo/t/spvm_t_list
-	cc  -I. -Ilib/SPVM/Build/include -fno-strict-aliasing -pipe -fstack-protector -I/usr/local/include -D_LARGEFILE_SOURCE -D_FILE_OFFSET_BITS=64 -std=c99 -Wall -Wextra -Wno-unused-label -Wno-unused-function -Wno-unused-label -Wno-unused-parameter -Wno-unused-variable -lm  -O3 -o solo/t/spvm_t_hash solo/t/spvm_t_hash.c spvm_hash.o spvm_util_allocator.o spvm_hash_func.o
+	cc -DSPVM_DEBUG_DUMP -DSPVM_DEBUG_OBJECT_COUNT -I. -Ilib/SPVM/Build/include -fno-strict-aliasing -pipe -fstack-protector -I/usr/local/include -D_LARGEFILE_SOURCE -D_FILE_OFFSET_BITS=64 -std=c99 -Wall -Wextra -Wno-unused-label -Wno-unused-function -Wno-unused-label -Wno-unused-parameter -Wno-unused-variable -lm  -O0 -g -o solo/t/spvm_t_hash solo/t/spvm_t_hash.c spvm_hash.o spvm_util_allocator.o spvm_hash_func.o
 	solo/t/spvm_t_hash
 
 clean:
